# sight

./: .clang-format  .clangd  .gitignore  .gitmodules  CMakeLists.txt  README.md  Test15.json  Test15.yaml  XQA.json  XQA.yaml  keybindings.yaml  program.cpp  sight.cpp  sight.h  sight_code_set.cpp  sight_code_set.h  sight_colors.h  sight_external_widgets.cpp  sight_external_widgets.h  sight_image.cpp  sight_image.h  sight_js.cpp  sight_js.h  sight_js_parser.cpp  sight_js_parser.h  sight_keybindings.cpp  sight_keybindings.h  sight_network.cpp  sight_network.h  sight_node_editor.cpp  sight_node_editor.h  sight_nodes.cpp  sight_nodes.h  sight_object.h  sight_plugin.cpp  sight_plugin.h  sight_project.cpp  sight_project.h  sight_render.h  sight_render_directx11.cpp  (+13 more)
cmake/: FindLibUV.cmake  FindV8.cmake
dependencies/: CMakeLists.txt
dependencies/sight-util/: shared_queue.cpp  shared_queue.h  sight_address.cpp  sight_address.h  sight_defines.h  sight_language.cpp  sight_language.h  sight_log.cpp  sight_log.h  sight_memory.cpp  sight_memory.h  sight_queue.cpp  sight_queue.h  sight_util.cpp  sight_util.h
docs/: Nodes.md  Types.md  addTemplateNode.md  windows 编译记录.md  草稿.md
include/: sight.h  sight_event_bus.h  sight_js.h  sight_keybindings.h  sight_network.h  sight_node.h  sight_node_graph.h  sight_popup_modal.h  sight_project.h  sight_ui.h  sight_ui_hierarchy.h  sight_ui_node_editor.h  sight_undo.h
others/v8pp/: config.hpp
plugins/dot-plugin/: doT.js  exports-ui.js  package.js
plugins/nodejs-base/: main.js  package.js
plugins/nodejs-http/: package.js
plugins/nodejs-redis/: nodes.js  package.js
plugins/sight-base/: exports-common.js  exports-tools.js  exports-ui.js  exports.js  literals.js  package.js
plugins/sight-entity-plus/: exports-ui.js  package.js  part-java.js  part-vue.js
plugins/sight-imgui/: exports-ui.js  package.js
plugins/test/: abc.js  exports-ui.js  exports.js  logicNodes.js  package.js  templateNodes.js
plugins/underscore-plugin/: exports-ui.js  exports.js  package.js
resources/language/: en_US.yaml
scripts/: build-in.js  cpp-struct.js  generate-code.js  nodes.js  run_in_test.js  templateNodes.js  test-ideas.js
src/: sight.cpp  sight_colors.cpp  sight_event_bus.cpp  sight_external_widgets.cpp  sight_js.cpp  sight_keybindings.cpp  sight_node_graph.cpp  sight_nodes.cpp  sight_object.cpp  sight_plugin.cpp  sight_popup_modal.cpp  sight_project.cpp  sight_render_directx11.cpp  sight_terminal.cpp  sight_ui.cpp  sight_ui_hierarchy.cpp  sight_ui_node_editor.cpp  sight_undo.cpp  sight_widgets.cpp
